--- a/resources/views/angular/test1.html
+++ b/resources/views/angular/test1.html
@@ -1,3 +1,12 @@
 <div class="test1">
     <h1> dit is een test view 1</h1>
+    <a href="./redirect" >login</a>
+    <button ng-click="openlogin()">Login</button>
+    <iframe src="https://open.spotify.com/embed?uri=spotify:track:5JunxkcjfCYcY7xJ29tLai"
+            frameborder="0" allowtransparency="true"></iframe>
+    <iframe src="https://open.spotify.com/embed?uri=spotify:user:erebore:playlist:788MOXyTfcUb1tdw4oC7KJ&theme=white&view=coverart"
+            frameborder="0" allowtransparency="true"></iframe>
+
+    <iframe src="https://open.spotify.com/embed?uri=spotify:user:erebore:playlist:788MOXyTfcUb1tdw4oC7KJ"
+            width="250" height="80" frameborder="0" allowtransparency="true"></iframe>
 </div>
